--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,6 +15,8 @@ html {
 }
 
 body{
+  -webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
   font-family: 'Rubik', sans-serif;
   color: #556270;
 }
@@ -119,9 +121,16 @@ a:hover{
   text-decoration: none;
 }
 
-section{
+.coaching section{
   padding: 70px 0;
 }
+
+.fixed{
+  position: fixed;
+  bottom:0;
+  width: 100%;
+}
+
 
 .italic{
   font-style: italic;
@@ -162,6 +171,14 @@ button{
   margin-bottom: 20px;
 }
 
+.transitionall {
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.35s ease-in-out;
+  -o-transition: all 0.35s ease-in-out;
+  -ms-transition: all 0.35s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
 button a {
   color: #fff;
 }
@@ -170,6 +187,11 @@ button a:hover{
   color: #fff;
   opacity: .8;
   text-decoration: none;
+}
+
+.logo{
+  margin: 20px 0 0 20px;
+  position: absolute;
 }
 
 .header{
@@ -239,6 +261,63 @@ button a:hover{
   max-width: 350px;
 }
 
+.full-slide{
+  height: 100vh;
+  position: absolute;
+  width :100%;
+  opacity: 1;
+}
+
+.full-slide h1{
+  opacity: 0;
+  -webkit-transform: translateY(50px);
+  transform: translateY(50px);
+  transition-delay: .5s
+}
+
+.full-slide .col {
+  /* min-height: 37%; */
+}
+
+.full-slide .col h4 {
+  position: relative;
+  /* bottom: 0; */
+}
+
+.full-slide .col h4 a{
+  border-bottom: 3px solid #fff;
+}
+
+.full-slide .col h4 a:hover{
+  border-bottom: 3px solid #FF6B6B;
+}
+
+.saying{
+  opacity: 0;
+  top:0;
+	left: 100%;
+	margin-left: -100%;
+	float: left;
+  max-width: 100%;
+  position: relative;
+}
+
+.saying.active{
+  opacity: 1;
+  transition-delay: .5s;
+}
+
+.saying.active h1{
+  transition: all .9s ease-in-out;
+  transition-delay: .4s;
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.full-slide h2{
+  font-weight: 100;
+}
+
 
 
 
@@ -247,8 +326,12 @@ img.cirle{
   margin: -10rem auto 30px;
 }
 
-.overlap{
+.coaching section.overlap{
   padding-top: 0;
+}
+
+.coaching section.dark{
+  padding-bottom: 140px;
 }
 
 .overlap h2{
@@ -260,20 +343,20 @@ img.cirle{
 }
 
 ul{
-  margin: 40px 0;
-  padding: 0;
+  /* margin: 40px 0; */
+  /* padding: 0; */
 }
 ul li{
-  width: 50%;
-  display: inline;
+  /* width: 50%; */
+  /* display: inline; */
   float:left;
   font-size: 1.5rem;
-  line-height: 1;
+  /* line-height: 1; */
   margin-bottom: 10px;
 }
 
 ul li:before{
-  content: '- ';
+  /* content: '- '; */
 }
 
 
@@ -290,6 +373,25 @@ ul li:before{
 
 
 
+footer{
+  padding: 20px 0;
+}
+
+footer img{
+  float:left;
+}
+
+footer p{
+  float:left;
+  font-size: 1rem;
+  color: #B4B4B4;
+  margin: 20px 0 0 20px;
+}
+
+footer .phone{
+  float:right;
+  color: #FF6B6B;
+}
 
 
 
