--- a/css/main.css
+++ b/css/main.css
@@ -1,25 +1,28 @@
 /*! HTML5 Boilerplate v6.0.1 | MIT License | https://html5boilerplate.com/ */
 
+
 /*
  * What follows is the result of much research on cross-browser styling.
  * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
  * Kroc Camen, and the H5BP dev community and team.
  */
 
+
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
 
 html {
-  font-size: 62.5%;
+    font-size: 62.5%;
 }
 
-body{
-  -webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-  font-family: 'Rubik', sans-serif;
-  color: #556270;
+body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-family: 'Rubik', sans-serif;
+    color: #556270;
 }
+
 
 /*
  * Remove text-shadow in selection highlight:
@@ -41,6 +44,7 @@ body{
     text-shadow: none;
 }
 
+
 /*
  * A better looking default horizontal rule
  */
@@ -53,6 +57,7 @@ hr {
     margin: 1em 0;
     padding: 0;
 }
+
 
 /*
  * Remove the gap between audio, canvas, iframes,
@@ -69,6 +74,7 @@ video {
     vertical-align: middle;
 }
 
+
 /*
  * Remove default fieldset styles.
  */
@@ -79,6 +85,7 @@ fieldset {
     padding: 0;
 }
 
+
 /*
  * Allow only vertical resizing of textareas.
  */
@@ -87,322 +94,325 @@ textarea {
     resize: vertical;
 }
 
+
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
 
-h1{
-  font-size: 6rem;
-  line-height: 1;
+h1 {
+    font-size: 6rem;
+    line-height: 1;
 }
 
-h2{
-  font-size: 4rem;
+h2 {
+    font-size: 4rem;
 }
 
-h3{
-  font-size: 3rem;
+h3 {
+    font-size: 3rem;
 }
 
-h4{
-  font-size: 2.5rem;
+h4 {
+    font-size: 2.5rem;
 }
 
-p{
-  font-size: 1.8rem;
+p {
+    font-size: 1.8rem;
 }
 
 a {
-  color: #FF6B6B;
+    color: #FF6B6B;
 }
 
-a:hover{
-  color: #FF6B6B;
-  text-decoration: none;
+a:hover {
+    color: #FF6B6B;
+    text-decoration: none;
 }
 
-.coaching section{
-  padding: 70px 0;
+.coaching section {
+    padding: 70px 0;
 }
 
-.fixed{
-  position: fixed;
-  bottom:0;
-  width: 100%;
+.fixed {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
-
-.italic{
-  font-style: italic;
+.italic {
+    font-style: italic;
 }
 
-.spacer{
-  width: 100%;
-  height: 80px;
-  display: block;
-  position: relative;
+.spacer {
+    width: 100%;
+    height: 80px;
+    display: block;
+    position: relative;
 }
 
-.pad-bottom-150{
-  padding-bottom: 150px;
+.pad-bottom-150 {
+    padding-bottom: 150px;
 }
 
-.container{
-  max-width: 960px;
+.container {
+    max-width: 960px;
 }
 
-.container, .row{
-  height: 100%;
+.container,
+.row {
+    height: 100%;
 }
 
-button{
-  background-color: #FF6B6B;
-  margin: 50px auto 0;
-  display: block;
-  text-align: center;
-  color:#fff;
-  font-size: 2.5rem;
-  letter-spacing: 0.025em;
-  line-height: 1;
-  padding: 20px 0;
-  border-radius: 5px;
-  width: 370px;
-  cursor: pointer;
-  margin-bottom: 20px;
+button {
+    background-color: #FF6B6B;
+    margin: 50px auto 0;
+    display: block;
+    text-align: center;
+    color: #fff;
+    font-size: 2.5rem;
+    letter-spacing: 0.025em;
+    line-height: 1;
+    padding: 20px 10px;
+    border-radius: 5px;
+    min-width: 300px;
+    max-width: 370px;
+    cursor: pointer;
+    margin-bottom: 20px;
 }
 
 .transitionall {
-  -webkit-transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.35s ease-in-out;
-  -o-transition: all 0.35s ease-in-out;
-  -ms-transition: all 0.35s ease-in-out;
-  transition: all 0.5s ease-in-out;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+    -ms-transition: all 0.35s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
 
 button a {
-  color: #fff;
+    color: #fff;
 }
 
-button a:hover{
-  color: #fff;
-  opacity: .8;
-  text-decoration: none;
+button a:hover {
+    color: #fff;
+    opacity: .8;
+    text-decoration: none;
 }
 
-.logo{
-  margin: 20px 0 0 20px;
-  position: absolute;
+.logo {
+    margin: 20px 0 0 20px;
+    position: absolute;
 }
 
-.header{
-  height: 65vh;
+.header {
+    min-height: 65vh;
 }
 
-.header h1{
-  margin: 60px auto 0px;
-  max-width: 930px;
+.header h1 {
+    margin: 60px auto 0px;
+    max-width: 930px;
 }
 
 .header h4,
-.header .italic{
-  color: #556270;
-  line-height: 1;
+.header .italic {
+    color: #556270;
+    line-height: 1;
 }
 
-.header p{
-  font-size: 2.5rem;
+.header p {
+    font-size: 2.5rem;
 }
 
-.arrow{
-  background-color: #fff;
-  border-radius: 50%;
-  border: 5px solid #fff;
+.arrow {
+    background-color: #fff;
+    border-radius: 50%;
+    border: 5px solid #fff;
 }
 
-.green{
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#4ecdc4+0,3db6ae+100 */
-  background: #4ecdc4; /* Old browsers */
-  background: -moz-linear-gradient(45deg, #4ecdc4 0%, #3db6ae 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(45deg, #4ecdc4 0%,#3db6ae 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(45deg, #4ecdc4 0%,#3db6ae 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4ecdc4', endColorstr='#3db6ae',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-  color: #fff;
+.green {
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#4ecdc4+0,3db6ae+100 */
+    background: #4ecdc4;
+    /* Old browsers */
+    background: -moz-linear-gradient(45deg, #4ecdc4 0%, #3db6ae 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(45deg, #4ecdc4 0%, #3db6ae 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(45deg, #4ecdc4 0%, #3db6ae 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#4ecdc4', endColorstr='#3db6ae', GradientType=1);
+    /* IE6-9 fallback on horizontal gradient */
+    color: #fff;
 }
 
 .gray {
-  background-color: #F8F8F8;
+    background-color: #F8F8F8;
 }
 
 .dark {
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#556270+0,3e5063+100 */
-  background: #556270; /* Old browsers */
-  background: -moz-linear-gradient(45deg, #556270 0%, #3e5063 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(45deg, #556270 0%,#3e5063 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(45deg, #556270 0%,#3e5063 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#556270', endColorstr='#3e5063',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-  color: #fff;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#556270+0,3e5063+100 */
+    background: #556270;
+    /* Old browsers */
+    background: -moz-linear-gradient(45deg, #556270 0%, #3e5063 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(45deg, #556270 0%, #3e5063 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(45deg, #556270 0%, #3e5063 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#556270', endColorstr='#3e5063', GradientType=1);
+    /* IE6-9 fallback on horizontal gradient */
+    color: #fff;
 }
 
-
-
-.take-aways{
-  margin-top: 70px;
+.take-aways {
+    margin-top: 70px;
 }
 
-.take-aways img{
-  height: 93px;
-  margin-bottom: 20px;
+.take-aways img {
+    height: 93px;
+    margin-bottom: 20px;
 }
 
-.take-aways p{
-  font-weight: 700;
-  margin: 0 auto;
-  font-size: 2.0rem;
-  max-width: 350px;
+.take-aways p {
+    font-weight: 700;
+    margin: 0 auto;
+    font-size: 2.0rem;
+    max-width: 350px;
 }
 
-.full-slide{
-  height: 100vh;
-  position: absolute;
-  width :100%;
-  opacity: 1;
+.full-slide {
+    height: 100vh;
+    position: absolute;
+    width: 100%;
+    opacity: 1;
 }
 
-.full-slide h1{
-  opacity: 0;
-  -webkit-transform: translateY(50px);
-  transform: translateY(50px);
-  transition-delay: .5s
+.full-slide h1 {
+    opacity: 0;
+    -webkit-transform: translateY(50px);
+    transform: translateY(50px);
+    transition-delay: .5s
 }
 
 .full-slide .col {
-  /* min-height: 37%; */
+    /* min-height: 37%; */
 }
 
 .full-slide .col h4 {
-  position: relative;
-  /* bottom: 0; */
+    position: relative;
+    /* bottom: 0; */
 }
 
-.full-slide .col h4 a{
-  border-bottom: 3px solid #fff;
+.full-slide .col h4 a {
+    border-bottom: 3px solid #fff;
 }
 
-.full-slide .col h4 a:hover{
-  border-bottom: 3px solid #FF6B6B;
+.full-slide .col h4 a:hover {
+    border-bottom: 3px solid #FF6B6B;
 }
 
-.saying{
-  opacity: 0;
-  top:0;
-	left: 100%;
-	margin-left: -100%;
-	float: left;
-  max-width: 100%;
-  position: relative;
+.saying {
+    opacity: 0;
+    top: 0;
+    left: 100%;
+    margin-left: -100%;
+    float: left;
+    max-width: 100%;
+    position: relative;
 }
 
-.saying.active{
-  opacity: 1;
-  transition-delay: .5s;
+.saying.active {
+    opacity: 1;
+    transition-delay: .5s;
 }
 
-.saying.active h1{
-  transition: all .9s ease-in-out;
-  transition-delay: .4s;
-  opacity: 1;
-  transform: translateY(0);
+.saying.active h1 {
+    transition: all .9s ease-in-out;
+    transition-delay: .4s;
+    opacity: 1;
+    transform: translateY(0);
 }
 
-.full-slide h2{
-  font-weight: 100;
+.full-slide h2 {
+    font-weight: 100;
 }
 
-
-
-
-img.cirle{
-  display: block;
-  margin: -10rem auto 30px;
+img.cirle {
+    display: block;
+    margin: -10rem auto 30px;
 }
 
-.coaching section.overlap{
-  padding-top: 0;
+.coaching section.overlap {
+    padding-top: 0;
 }
 
-.coaching section.dark{
-  padding-bottom: 140px;
+.coaching section.dark {
+    padding-bottom: 140px;
 }
 
-.overlap h2{
-  color: #4ECDC4;
+.overlap h2 {
+    color: #4ECDC4;
 }
 
-.overlap h3{
-  margin-bottom: 40px;
+.overlap h3 {
+    margin-bottom: 40px;
 }
 
-ul{
-  /* margin: 40px 0; */
-  /* padding: 0; */
-}
-ul li{
-  /* width: 50%; */
-  /* display: inline; */
-  float:left;
-  font-size: 1.5rem;
-  /* line-height: 1; */
-  margin-bottom: 10px;
+ul {
+    /* margin: 40px 0; */
+    /* padding: 0; */
 }
 
-ul li:before{
-  /* content: '- '; */
+ul li {
+    /* width: 50%; */
+    /* display: inline; */
+    float: left;
+    font-size: 1.5rem;
+    /* line-height: 1; */
+    margin-bottom: 10px;
 }
 
-
-.carousel-item > div{
-  min-height: 400px;
+ul li:before {
+    /* content: '- '; */
 }
 
-.carousel-item p{
-  float:right;
-  color: #556270;
-  font-size: 2.0rem;
+.carousel-item>div {
+    min-height: 400px;
 }
 
-
-
-
-footer{
-  padding: 20px 0;
+.carousel-item p {
+    float: right;
+    color: #556270;
+    font-size: 2.0rem;
 }
 
-footer img{
-  float:left;
+footer {
+    padding: 20px 0;
 }
 
-footer p{
-  float:left;
-  font-size: 1rem;
-  color: #B4B4B4;
-  margin: 20px 0 0 20px;
+footer img {
+    float: left;
 }
 
-footer .phone{
-  float:right;
-  color: #FF6B6B;
+footer p {
+    float: left;
+    font-size: 1rem;
+    color: #B4B4B4;
+    margin: 20px 0 0 20px;
 }
 
-
+footer .phone {
+    float: right;
+    color: #FF6B6B;
+}
 
 
 /* ==========================================================================
    Helper classes
    ========================================================================== */
 
-.center-txt{
-  text-align: center;
+.center-txt {
+    text-align: center;
 }
+
 
 /*
  * Hide visually and from screen readers
@@ -411,6 +421,7 @@ footer .phone{
 .hidden {
     display: none !important;
 }
+
 
 /*
  * Hide only visually, but have it available for screen readers:
@@ -432,8 +443,10 @@ footer .phone{
     padding: 0;
     position: absolute;
     width: 1px;
-    white-space: nowrap; /* 1 */
+    white-space: nowrap;
+    /* 1 */
 }
+
 
 /*
  * Extends the .visuallyhidden class to allow the element
@@ -454,6 +467,7 @@ footer .phone{
     white-space: inherit;
 }
 
+
 /*
  * Hide visually and from screen readers, but maintain layout
  */
@@ -461,6 +475,7 @@ footer .phone{
 .invisible {
     visibility: hidden;
 }
+
 
 /*
  * Clearfix: contain floats
@@ -476,13 +491,16 @@ footer .phone{
 
 .clearfix:before,
 .clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
+    content: " ";
+    /* 1 */
+    display: table;
+    /* 2 */
 }
 
 .clearfix:after {
     clear: both;
 }
+
 
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
@@ -495,11 +513,12 @@ footer .phone{
 }
 
 @media print,
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
     /* Style adjustments for high resolution devices */
 }
+
 
 /* ==========================================================================
    Print styles.
@@ -512,35 +531,30 @@ footer .phone{
     *:before,
     *:after {
         background: transparent !important;
-        color: #000 !important; /* Black prints faster:
+        color: #000 !important;
+        /* Black prints faster:
                                    http://www.sanbeiji.com/archives/953 */
         box-shadow: none !important;
         text-shadow: none !important;
     }
-
     a,
     a:visited {
         text-decoration: underline;
     }
-
     a[href]:after {
         content: " (" attr(href) ")";
     }
-
     abbr[title]:after {
         content: " (" attr(title) ")";
     }
-
     /*
      * Don't show links that are fragment identifiers,
      * or use the `javascript:` pseudo protocol
      */
-
     a[href^="#"]:after,
     a[href^="javascript:"]:after {
         content: "";
     }
-
     pre {
         white-space: pre-wrap !important;
     }
@@ -549,28 +563,23 @@ footer .phone{
         border: 1px solid #999;
         page-break-inside: avoid;
     }
-
     /*
      * Printing Tables:
      * http://css-discuss.incutio.com/wiki/Printing_Tables
      */
-
     thead {
         display: table-header-group;
     }
-
     tr,
     img {
         page-break-inside: avoid;
     }
-
     p,
     h2,
     h3 {
         orphans: 3;
         widows: 3;
     }
-
     h2,
     h3 {
         page-break-after: avoid;
